# visual-geolocation-pipeline

./: .gitignore  LICENSE  README.md  color_equalization.py  download_region_data.py  download_region_elevation.py  embedding_clip.py  embedding_inception.py  localization.py  localization_map.py  metrics.py  prepare_data_for_sfm.py  pyproject.toml  region_selection.py  route_generation.py  select_photo_by_coords.py  test.py  test1.py  test3.py  triangulate.py  triangulate2.py  triangulate3.py
conf/: displacement_with_rerank.yaml  displacement_without_rerank.yaml  expansion_with_rerank.yaml  expansion_without_rerank.yaml
gpu_re_ranking/: evaluate_rerank_gpu.py
legacy/: embedding_clip.py  localization.py  localization_by_query.py  localization_map.py  route_map.py  triangulate.py  triangulate2.py  triangulate4.py
legacy/position_refinement/: LinearPnP.py  NonLinearPnP.py
position_refinement/: NonLinearTriangulation.py  PnPRansac.py
src/: camera.py  dataset.py  geometric_validation.py  geoutils.py  keypoints_generation.py  keypoints_matching.py  localization.py  localization2.py  match_pairs.py  metrics.py  pose_estimation.py  utils.py  visualize_cameras.py
src/download/: download_region_data.py  download_region_elevation.py  download_region_metadata.py  region_selection.py  visualize_metadata.py
src/geonavpy/: color_equalization.py  geometric_validation.py  geoutils.py  keypoints_generation.py  keypoints_matching.py  utils.py
src/matching/: superglue.py
src/pysight/: geometric_validation.py  mapping.py  utils.py
src/ranking/: gnn_reranking.py  index.py
(+31 files in other folders)
